# just-webrtc

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
crates/just-webrtc/: Cargo.toml  README.md
crates/just-webrtc-signalling/: Cargo.toml  README.md  build.rs
crates/just-webrtc-signalling/proto/: main.proto
crates/just-webrtc-signalling/src/: client.rs  lib.rs  main.rs  server.rs
crates/just-webrtc-signalling/tests/: signalling.rs
crates/just-webrtc/src/: lib.rs  platform.rs  types.rs
crates/just-webrtc/src/platform/: native.rs  wasm.rs  web.rs
crates/just-webrtc/tests/: data_channels.rs
examples/: README.md
examples/peer/: Cargo.toml
examples/peer-neshi/: Cargo.toml
examples/peer-neshi/src/: main.rs
examples/peer-tonic/: Cargo.toml  index.html
examples/peer-tonic/src/: main.rs
examples/peer/src/: main.rs
examples/protocol/: Cargo.toml  build.rs
examples/protocol-neshi/: Cargo.toml  build.rs
examples/protocol-neshi/proto/: metadata.proto
examples/protocol-neshi/src/: lib.rs  metadata.rs
examples/protocol-tonic/: Cargo.toml
examples/protocol-tonic/proto/: main.proto
examples/protocol-tonic/src/: client.rs
examples/protocol/proto/: main.proto  state.proto
examples/protocol/src/: metadata.rs  state.rs
examples/server/: Cargo.toml
examples/server-neshi/: Cargo.toml
examples/server-neshi/src/: main.rs
examples/server/src/: main.rs
examples/signalling-peer/: Cargo.toml  README.md
examples/signalling-peer/src/: main.rs
examples/signalling-server/: Cargo.toml  README.md
examples/signalling-server/src/: main.rs
src/: lib.rs  platform.rs
src/platform/: native.rs  web.rs
tests/: data_channels.rs
