[package]
name = "just-webrtc"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "examples/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.10"
tokio = { version = "1.36", default-features = false, features = ["sync"] }
bytes = "1.5"
serde = "1.0"
log = "0.4.20"
thiserror = "1.0"
trait-variant = "0.1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3.68", default-features = false, features = [
  "MessageEvent",
  "RtcBundlePolicy",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcDataChannelType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcIceTransportPolicy",
  "RtcPeerConnection",
  "RtcPeerConnectionState",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
] }

[dev-dependencies]
anyhow = "1.0"
pretty_env_logger = "0.5"
