[package]
name = "just-webrtc-signalling"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
prost = "0.12.3"
#client deps (all targets)
thiserror = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
futures = { version = "0.3.30", optional = true }
serde = { version = "1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tonic = { version = "0.11.0", default-features = false, features = ["prost", "codegen", "tls"] } # no included transport layer
tonic-web-wasm-client = { version = "0.5.1" }    # transport layer for tonic clients over WASM

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.11.0", default-features = false, features = ["prost", "codegen", "transport", "tls"] }  # include native transport layer
tokio-stream = { version = "0.1.14", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
slotmap = { version = "1", optional = true }
pretty_env_logger = { version = "0.5", optional = true }
tower-http = { version = "0.4", features = ["cors"], optional = true }
http = { version = "0.2.12", optional = true }
tonic-web = { version = "0.11.0", optional = true }

[build-dependencies]
tonic-build = { version = "0.11.0", default-features = false, features = ["prost", "transport"] } # transport is disabled for wasm within build script

[features]
default = ["server", "server-web", "client"]
server = [
    "dep:tokio",
    "dep:tokio-stream",
    "dep:slotmap",
    "dep:pretty_env_logger",
]
server-web = [
    "dep:tower-http",
    "dep:http",
    "dep:tonic-web",
]
client = [
    "dep:bincode",
    "dep:thiserror",
    "dep:anyhow",
    "dep:futures",
    "dep:serde",
]
