[package]
name = "just-webrtc"
version = "0.1.0"
edition = "2021"
authors = ["Reece Kibble <reecek@uniciant.com>"]
categories = ["network-programming", "web-programming", "wasm", "game-development"]
keywords = ["webrtc", "peer", "wasm", "networking", "peer-to-peer"]
description = "Just simple, fast and easy WebRTC peers for both native and wasm"
documentation = "https://docs.rs/just-webrtc"
repository = "https://github.com/uniciant/just-webrtc/tree/main/crates/just-webrtc"
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"
readme = "README.md"
exclude = [".git*"]

[dependencies]
bytes = "1.5"
serde = "1.0"
log = "0.4.20"
thiserror = "1.0"
async_cell = "0.2.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.68", default-features = false, features = [
  "MessageEvent",
  "RtcBundlePolicy",
  "RtcConfiguration",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelInit",
  "RtcDataChannelType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcIceGatheringState",
  "RtcIceTransportPolicy",
  "RtcPeerConnection",
  "RtcPeerConnectionState",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
] }
local-channel = "0.1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webrtc = "0.10"
trait-variant = "0.1.2"
flume = { version = "0.11.0", default-features = false, features = ["async"] }

[dev-dependencies]
anyhow = "1.0"
pretty_env_logger = "0.5"
tokio = { version = "1.36", features = ["rt", "macros"] }
wasm-bindgen-test = "0.3.42"
console_log = "1.0"
