[package]
name = "peer-neshi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pretty_env_logger = "0.5"
just-webrtc = { path = "../../crates/just-webrtc" }
neshi = { path = "../../../neshi/crates/neshi" }
bincode = "1.3"
protocol-neshi = { path = "../protocol-neshi" }
log = "0.4"
futures = "0.3.30"
zduny-wasm-timer = "0.2.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
tokio = { version = "1.36", default-features = false, features = ["sync"] }
wasm-bindgen-futures = "0.4.42"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger = "0.5"
tokio = { version = "1.36", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
