[package]
name = "peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pretty_env_logger = "0.5"
just-webrtc = { path = "../../" }
neshi = { path = "../../../neshi/crates/neshi" }
bincode = "1.3"
protocol = { path = "../protocol" }
log = "0.4"
futures = "0.3.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
tokio = { version = "1.36", default-features = false, features = ["sync"] }
poll-promise = { version = "0.3.0", features = ["web"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger = "0.5"
tokio = { version = "1.36", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
poll-promise = { version = "0.3.0", features = ["tokio"] }
