[package]
name = "server-neshi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pretty_env_logger = "0.5"
neshi-server = { path = "../../../neshi/crates/neshi-server" }
protocol-neshi = { path = "../protocol-neshi" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
