[package]
name = "signalling-peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
just-webrtc = { path = "../../crates/just-webrtc" }
just-webrtc-signalling = { path = "../../crates/just-webrtc-signalling", default-features = false, features = ["client"] }
log = "0.4"
futures-util = "0.3.30"
zduny-wasm-timer = "0.2.8"
bincode = "1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"
wasm-bindgen-futures = "0.4.42"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger = "0.5"
tokio = { version = "1.36", default-features = false, features = ["rt", "macros", "sync"] }
