[package]
name = "signalling-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
just-webrtc-signalling = { path = "../../crates/just-webrtc-signalling", default-features = false, features = ["server", "server-web"]}
